ship with jvm version independently to develop env - use compress=1 for better result - document docker calls in readme