@@ -15,17 +15,14 @@ function build_oi(){
  mvn package -D$mvnparam
  sudo cp src/main/resources/$package_name deb/$package/usr/bin
  sudo cp target/$package_name.jar deb/$package/usr/lib
- 
- jlink \
-    --add-modules java.base \
-    --verbose \
-    --strip-debug \
-    --compress 2 \
-    --no-header-files \
-    --no-man-pages \
-    --output deb/$package/usr/share/jvm_for_oi
- ln -s deb/$package/usr/share/jvm_for_oi deb/$package/usr/bin/jvm_for_oi 
- 
+
+docker build -t adopt_jdk_image -f Dockerfile.build .
+docker create --name adopt_jdk_container adopt_jdk_image
+docker cp adopt_jdk_container:/opt/jvm_for_oi deb/$package/usr/share/jvm_for_oi
+docker rm adopt_jdk_container
+
+ln -s ../share/jvm_for_oi/bin/java deb/$package/usr/bin/jvm_for_oi 
+
 }
 
 function build(){
